--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,16 +13,26 @@ jobs:
     name: generate
 
     steps:
+      - uses: actions/checkout@v2
       - uses: Platane/snk@master
+        id: snake-gif
         with:
-         # github user name to read the contribution graph from (**required**)
-         # using action context var `github.repository_owner` or specified user
-         github_user_name: ${{ github.repository_owner }}
-     
-         # path of the generated gif file
-         # If left empty, the gif file will not be generated
-         gif_out_path: N_github-snake.gif
-     
-         # path of the generated svg file
-         # If left empty, the svg file will not be generated
-         svg_out_path: N_github-snake.svg
+          github_user_name: Naozumi520
+          gif_out_path: N_github-snake.gif
+          svg_out_path: N_github-snake.svg
+
+      - run: git status
+
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.CARDSTOKEN }}
+          branch: master
+          force: true
+
+      - uses: crazy-max/ghaction-github-pages@v2.1.3
+        with:
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.CARDSTOKEN }}
