--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: Platane/snk@v2
+      - uses: Platane/snk@main
         id: snake-gif
         with:
           github_user_name: Naozumi520
