--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,8 @@ jobs:
         id: snake-gif
         with:
           github_user_name: Naozumi520
-          gif_out_path: dist/N_github-snake.gif
-          svg_out_path: dist/N_github-snake.svg
+          outputs: |
+            dist/N_github-snake.svg
 
       - run: git status
 
