--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,38 +1,36 @@
 name: SNK_Nao
 
 on:
-  create:
-  push:
-  schedule: # execute every 24 hours
-    - cron: "* */24 * * *"
+  schedule:
+    - cron: "0 */24 * * *"
+
   workflow_dispatch:
 
+  push:
+    branches:
+    - master
+
 jobs:
-  build:
+  generate:
     runs-on: ubuntu-latest
-    name: generate
-
+    timeout-minutes: 10
+    
     steps:
-      - uses: actions/checkout@v2
-      - uses: Platane/snk@main
-        id: snake-gif
+      # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
+      - name: generate github-contribution-grid-snake.svg
+        uses: Platane/snk/svg-only@v2
         with:
-          github_user_name: Naozumi520
+          github_user_name: ${{ github.repository_owner }}
           outputs: |
-            dist/N_github-snake.svg
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
 
-      - run: git status
-
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.CARDSTOKEN }}
-          branch: master
-          force: true
-
-      - uses: crazy-max/ghaction-github-pages@v2.1.3
+      # push the content of <build_dir> to a branch
+      # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
+      - name: push github-contribution-grid-snake.svg to the output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
           build_dir: dist
         env:
-          GITHUB_TOKEN: ${{ secrets.CARDSTOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
